--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -1,1 +1,1 @@
-<%= render "form", story: @story, action: :new %>
+<%= render partial: "form", locals: { story: @story, url: stories_url, method: "POST" }%>
