--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -1,10 +1,13 @@
 <form class="" action="<%= url %>" method="POST">
   <input type="hidden" name="_method" value="<%= method %>">
-  <input type="hidden"
-    name="authenticity_token"
-    value="<%= form_authenticity_token %>">
-  <input type="text" name="story[title]" value="<%= @story.title %>">
-  <textarea name="story[content]" rows="8" cols="80" value="<%= @story.content %>"></textarea>
+  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 
-  <input type="submit" value="Submit">
+  <input type="text" name="story[title]" value="<%= @story.title %>">
+  <textarea name="story[content]" rows="8" cols="80"><%= @story.content %></textarea>
+
+  <% if method === "POST" %>
+    <input type="submit" value="Submit">
+  <% else %>
+    <input type="submit" value="Update">
+  <% end %>
 </form>
