display post form and current story's comments in story_url

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
   <% end %>
 
   <a href="<%= new_story_url%>">Create Your Story</a>
+  <a href="<%= user_url(current_user) %>">Your Profile</a>
   <%= yield %>
 </body>
 </html>
