--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -1,1 +1,16 @@
 <%= render partial: "show", locals: { story: @story } %>
+
+<div class="">
+  <div class="">Comment on this story</div>
+  <%= render partial: "comments/form", locals: { url: story_comments_url(@story.id), method: "post"} %>
+</div>
+
+<div class="">Comments for story id <%= @story.id %></div>
+<ul>
+  <% @story.comments.each do |comment| %>
+    <li>
+      <div class=""><%= comment.content %></div>
+      <div class="">by <a href="<%= user_url(comment.user.id) %>"><%= comment.user.username %></a></div>
+    </li>
+  <% end %>
+</ul>
