--- a/app/views/stories/edit.html.erb
+++ b/app/views/stories/edit.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: "form", locals: { story: @story, url: story_url, method: "PATCH"} %>
+<%= render partial: "form", locals: { story: @story, url: story_url, method: "patch"} %>
