--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -2,23 +2,18 @@
 
 <div class="">
   <div>
-    <div><%= @likes.count %> likes</div>
-    <div>
-      <% if @liked %>
-        <form class="" action="<%= story_like_url %>" method="post">
-          <input type="hidden" name="_method" value="delete">
-          <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-          <input type="hidden" name="story_like[id]" value="<%= @current_user_like[0].id %>">
-          
-          <input type="submit" value="Unlike">
-        </form>
-      <% else %>
-        <form class="" action="<%= story_story_likes_url(@story.id) %>" method="post">
-          <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-          <input type="submit" value="Like">
-        </form>
-      <% end %>
-    </div>
+    <div><%= @story_likes.count %> likes for this story</div>
+    <% if @story_liked %>
+      <% url = story_like_url %>
+      <% req_method = "delete" %>
+      <% story_like_id = @like_id %>
+    <% else %>
+      <% url = story_story_likes_url(@story.id) %>
+      <% req_method = "post" %>
+      <% story_like_id = nil %>
+    <% end %>
+
+    <%= render partial: "likes/story_like_form", locals: { url: url, story_liked: @story_liked, like_id: story_like_id, story_or_comment: @story, method: req_method } %>
   </div>
   <div class="">Comment on this story</div>
   <%= render partial: "comments/form", locals: { url: story_comments_url(@story.id), method: "post"} %>
@@ -30,6 +25,19 @@
     <li>
       <div class=""><%= comment.content %></div>
       <div class="">by <a href="<%= user_url(comment.user.id) %>"><%= comment.user.username %></a></div>
+      <div class="">
+        <% comment_liked = comment.liked?(comment.id, current_user.id) %>
+        <% if comment_liked %>
+          <% url = comment_like_url %>
+          <% req_method = "delete" %>
+          <% comment_like_id = comment.like_id(comment.id, current_user.id) %>
+        <% else %>
+          <% url = story_comment_likes_url(@story.id) %>
+          <% req_method = "post" %>
+          <% comment_like_id = nil %>
+        <% end %>
+        <%= render partial: "likes/comment_like_form", locals: { url: url, comment_liked: comment_liked, like_id: comment_like_id, story_or_comment: comment, method: req_method } %>
+      </div>
     </li>
   <% end %>
 </ul>
