--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -16,7 +16,7 @@
     <%= render partial: "likes/story_like_form", locals: { url: url, story_liked: @story_liked, like_id: story_like_id, story_or_comment: @story, method: req_method } %>
   </div>
   <div class="">Comment on this story</div>
-  <%= render partial: "comments/form", locals: { url: story_comments_url(@story.id), method: "post"} %>
+  <%= render partial: "comments/form", locals: { url: story_comments_url(@story.id), parent_id: nil, method: "post" } %>
 </div>
 
 <div class="">Comments for story id <%= @story.id %></div>
@@ -36,6 +36,8 @@
           <% req_method = "post" %>
           <% comment_like_id = nil %>
         <% end %>
+        
+        <%= render partial: "comments/form", locals: { url: story_comments_url(@story.id), parent_id: comment.id, method: "post" } %>
         <%= render partial: "likes/comment_like_form", locals: { url: url, comment_liked: comment_liked, like_id: comment_like_id, story_or_comment: comment, method: req_method } %>
       </div>
     </li>
