create stories and comments links in user show; user can edit comment in comment show

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,3 +1,4 @@
+<%= binding.pry %>
 <form class="" action="<%= url %>" method="POST">
   <input type="hidden" name="_method" value="<%= method %>">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
@@ -12,7 +13,9 @@
   </textarea>
   <% if method.downcase === "post" %>
     <input type="submit" value="Submit">
-  <% else %>
+  <% elsif method.downcase === "patch" %>
+    <%= binding.pry %>
+    <input type="hidden" name="comment[id]" value="<%= @comment.id %>">
     <input type="submit" value="Update">
   <% end %>
 </form>
