--- a/app/views/likes/_comment_like_form.html.erb
+++ b/app/views/likes/_comment_like_form.html.erb
@@ -1,7 +1,7 @@
 <form class="" action="<%= url %>" method="post">
   <input type="hidden" name="_method" value="<%= method %>">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-  <% if method == "delete" %>
+  <% if method.downcase == "delete" %>
     <input type="hidden" name="comment_like[id]" value="<%= like_id %>">
   <% end %>
   
