--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,23 @@
 <div>Username: <%= @user.username %><div>
 <div>About yourself: <%= @user.user_desc %><div>
 <img src="<%= @user.photo.url %>" alt="">
+<% if @user.id != current_user.id %>
+  <% if @user.following?(current_user.id, @user.id) %>
+    <form class="" action="<%= follow_url(@follow.id) %>" method="post">
+      <input type="hidden" name="_method" value="delete">
+      <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+      
+      <input type="hidden" name="follow[id]" value="<%= @follow.id %>">
+      <input type="submit" name="" value="Unfollow">
+    </form>
+  <% else %>
+    <form class="" action="<%= user_follows_url(@user.id) %>" method="post">
+      <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+      
+      <input type="submit" name="" value="Follow">
+    </form>
+  <% end %>
+<% end %>
 <ul>
   <% id = @user.id %>
   <li>
