style stories index for mobile without icons; validate title & subtitle length

--- a/app/assets/stylesheets/sass_variables.scss
+++ b/app/assets/stylesheets/sass_variables.scss
@@ -4,3 +4,6 @@
 $sans-serif: 'Roboto';
 
 // something else such as my own personal css styling techniques //
+
+$green: #02b875;
+$dark-green: #00ab6b;
