add more css for landing page

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,4 +1,5 @@
 #main {
+  background-color: #FAFAFA;
   border: 1px solid orange;
   font-family: 'Roboto', sans-serif; // $sans-serif
   max-width: 1000px !important;
