--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -1,5 +1,4 @@
 .stories {
-  border: 1px solid yellow;
   margin: 25px auto 0px auto;
   width: 90%;
 }
@@ -7,13 +6,14 @@
 // story item //
 
 .stories-item {
-  border: 1px solid blue;
+  background: #FFFFFF;
+  border-radius: 2px;
+  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
   margin-bottom: 25px;
   padding: 10px;
 }
 
 .stories-item-header {
-  border: 1px solid red;
   height: 50px;
 }
 
@@ -27,10 +27,7 @@
 
 .stories-item-username-pub-rt-container {
   float: left;
-}
-
-.stories-item-username-pub-rt-container {
-  margin-top: 6.5px;
+  margin-top: 4.5px;
 }
 
 .stories-item-username {
@@ -42,6 +39,11 @@
   &:hover {
     color: #00ab6b;
   }
+}
+
+.stories-item-pub-rt-container {
+  color: rgba(0, 0, 0, 0.44);
+  margin-top: 2px;
 }
 
 .stories-item-published-date {
@@ -78,7 +80,7 @@
 }
 
 .stories-item-subtitle {
-  color: gray;
+  color: rgba(0, 0, 0, 0.44);
   font-size: 14px;
   font-weight: 400;
   letter-spacing: 0.01em;
@@ -106,10 +108,12 @@
 }
 
 .stories-item-like-count {
+  color: rgba(0, 0, 0, 0.44);
   float: left;
 }
 
 .stories-item-responses {
+  color: rgba(0, 0, 0, 0.44);
   float: right;
   margin-right: 8px;
 }
