--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,4 +1,5 @@
 .nav-bar {
+  background-color: #FFFFFF;
   border-bottom: 2px solid gray;   // sass_var
   padding-bottom: 5px;
   padding-top: 5px;
