--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,15 +10,17 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
  *= require_self
  */
  
-   @import url('https://fonts.googleapis.com/css?family=Roboto'); // font
-   @import "definitions";
-   @import "sass_variables";
-   @import "reset";
-   @import "main";
-   @import "header";
-   @import "navbar";
-   @import "landing";
+ @import url('https://fonts.googleapis.com/css?family=Roboto'); // font
+ @import "definitions";
+ @import "sass_variables";
+ @import "reset";
+ @import "main";
+ @import "header";
+ @import "navbar";
+ @import "modal";
+ @import "landing";
+   
+// COPY PASTE
