--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,6 +1,8 @@
+// COPY PASTE
+
 .header {
   background-color: #FFFFFF;
-  border-bottom: 1px solid gray; // sass_var
+  border-bottom: 1px solid $gray;
   height: 65px;
 }
 
@@ -16,21 +18,17 @@
   align-items: center;
 }
 
-.header-list-story-link,
-.header-list-auth,
-.header-list-search,
-.header-list-notification,
-.header-list-profile {
-  border: 1px solid green;
-}
-
 .header-list-logo {
   padding: 5px;
   flex: 0 0 40px;
 }
 
+.header-list-logo:hover {
+  cursor: pointer;
+}
+
 .header-list-auth-story-link {
-  color: #02b875;
+  color: $green;
   flex: 1 1 auto;
   text-align: right;
   font-size: 12px;
@@ -39,8 +37,9 @@
 }
 
 .header-list-auth-link:hover {
-  opacity: 1;
-  transition: opacity 0.5s ease-in-out;
+  color: $dark-green;
+  cursor: pointer;
+  transition: color 1s ease-in-out;
 }
 
 .header-list-search {
@@ -48,6 +47,14 @@
   flex: 0 0 25px;
   height: 25px;
   text-align: right;
+}
+
+.header-list-search {
+  cursor: pointer;
+}
+
+.header-list-search-icon-path {
+  d: $search-d;
 }
 
 // .header-list-notification,
