toggle auth selections modal component via auth link in header

--- a/app/assets/stylesheets/sass_variables.scss
+++ b/app/assets/stylesheets/sass_variables.scss
@@ -3,6 +3,7 @@
 $green: #02b875;
 $dark-green: #00ab6b;
 $gray: #FAFAFA;
+$overlay-gray: rgba(51,51,51,0.7);
 
 // fronts //
 $sans-serif: 'Roboto', sans-serif;
