--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -1,5 +1,16 @@
 // copy paste
+
 .modal {
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: $overlay-gray;
+  z-index: 10;
+  position: fixed;
+}
+
+.modal-inner-auth {
   background-color: #FFFFFF;
   border: 1px solid black;
   max-width: 520px;
@@ -7,4 +18,16 @@
   top: 50%;
   transform: translate(0, -50%);
   width: 100%;
+}
+
+.modal-close-btn {
+  color: red;
+  font-size: 20px;
+  position: fixed;
+  right: 10px;
+  top: 10px;
+}
+
+.modal-close-btn:hover {
+  cursor: pointer;
 }
