--- a/app/assets/stylesheets/sass_variables.scss
+++ b/app/assets/stylesheets/sass_variables.scss
@@ -1,9 +1,21 @@
 // COPY PASTE
 // colors//
+$blue: #30415D;
+$dark-blue: #212d41;
+$sky-blue: #328cc1;
+$sky-blue-hover: #28709a;
+$gold-leaf: #d9b310;
+$stormy: #494e6b;
+$stormy-hover: #33364a;
+$ivory-black: #1d2731;
+$ivory-black-hover: #171f27;
 $green: #02b875;
 $dark-green: #00ab6b;
+$light-gray: #F0F0F0;
 $gray: #FAFAFA;
+$dark-gray: rgba(0,0,0,0.6);
 $overlay-gray: rgba(51,51,51,0.7);
+
 
 // fronts //
 $sans-serif: 'Roboto', sans-serif;
