--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -28,7 +28,7 @@
 }
 
 .header-list-auth-story-link {
-  color: $green;
+  color: $blue;
   flex: 1 1 auto;
   text-align: right;
   font-size: 12px;
@@ -37,9 +37,9 @@
 }
 
 .header-list-auth-link:hover {
-  color: $dark-green;
+  color: $dark-blue;
   cursor: pointer;
-  transition: color 1s ease-in-out;
+  transition: color 0.5s ease-in-out;
 }
 
 .header-list-search {
