change sass vars

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,5 +1,5 @@
 #main {
-  background-color: $gray;
+  background-color: $main-background-gray;
   border: 1px solid orange;
   font-family: $sans-serif;
   max-width: 1000px !important;
