--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -12,7 +12,7 @@
 
 .modal-inner-auth {
   background-color: #FFFFFF;
-  border: 1px solid black;
+  border-radius: 2px;
   left: 50%;
   max-width: 400px;
   position: fixed;
