--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,7 +1,8 @@
 // COPY PASTE
 .nav-bar {
   background-color: #FFFFFF;
-  border-bottom: 2px solid #FAFAFA;
+  border-bottom: 1px solid $light-gray;
+  box-shadow: 0 2px 2px -2px rgba(0,0,0,.15);
   padding-bottom: 5px;
   padding-top: 5px;
 }
@@ -21,7 +22,7 @@
 }
 
 .nav-bar-link {
-  color: #FAFAFA;
+  color: $dark-gray;
 }
 
 .nav-bar-link:hover {
