--- a/app/assets/stylesheets/sass_variables.scss
+++ b/app/assets/stylesheets/sass_variables.scss
@@ -11,8 +11,10 @@ $ivory-black: #1d2731;
 $ivory-black-hover: #171f27;
 $green: #02b875;
 $dark-green: #00ab6b;
-$light-gray: #F0F0F0;
-$gray: #FAFAFA;
+$lighter-gray: #f0f0f0;
+$light-gray: rgba(0, 0, 0, 0.30);
+$gray: #c8c8c8;
+$main-background-gray: #FAFAFA;
 $dark-gray: rgba(0,0,0,0.6);
 $overlay-gray: rgba(51,51,51,0.7);
 
