change border colors

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -2,7 +2,7 @@
 
 .header {
   background-color: #FFFFFF;
-  border-bottom: 1px solid $light-gray;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.10);
   height: 50px;
 }
 
