--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -2,7 +2,7 @@
 .nav-bar {
   background-color: #FFFFFF;
   border-bottom: 1px solid $light-gray;
-  box-shadow: 0 2px 2px -2px rgba(0,0,0,.15);
+  box-shadow: 0 2px 2px -2px rgba(0,0,0,0.15);
   padding-bottom: 5px;
   padding-top: 5px;
 }
