create modal refill action & add its case in modal reducers; rename action files; refill modal with different content when handling events

--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -105,7 +105,9 @@
 
 .stories-item-like-heart-img {
   float: left;
+  height: 25px;
   margin-right: 8px;
+  width: 25px;
 }
 
 .stories-item-like-heart-path {
@@ -125,6 +127,8 @@
 
 .stories-item-bookmark {
   float: right;
+  height: 25px;
+  width: 25px;
 }
 
 .stories-item-bookmark-path {
