--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -10,7 +10,7 @@
   z-index: 10;
 }
 
-.modal-inner-auth {
+.modal-inner-auth-selections {
   background-color: #FFFFFF;
   border-radius: 2px;
   left: 50%;
