--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -1,10 +1,12 @@
+// stories //
 .stories {
   margin: 25px auto 0px auto;
+  max-width: 660px;
   width: 90%;
+  margin: 40px auto 0px auto;
 }
 
-// story item //
-
+// stories item //
 .stories-item {
   background: #FFFFFF;
   border-radius: 2px;
