--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -2,8 +2,20 @@
   background-color: #FFFFFF;
   border-bottom: 1px solid $light-gray;
   box-shadow: 0 2px 2px -2px rgba(0,0,0,0.15);
+  box-sizing: border-box;
+  left: 50%;
   padding-bottom: 5px;
   padding-top: 5px;
+  position: fixed; // new
+  top: $header-height;
+  transform: translate(-50%, 0);
+  width: 100%;
+}
+
+.nav-bar-inner {
+  margin: 0 auto;
+  max-width: 1000px !important;
+  width: 100%;
 }
 
 .nav-bar-hamburger-menu {
