--- a/app/assets/stylesheets/sass_variables.scss
+++ b/app/assets/stylesheets/sass_variables.scss
@@ -17,6 +17,9 @@ $main-background-gray: #FAFAFA;
 $dark-gray: rgba(0,0,0,0.6);
 $overlay-gray: rgba(51,51,51,0.7);
 
+$yellow: #F3D351;
+$dark-yellow: #E8C63B;
+
 // header & navbar //
 $header-height: 50px;
 $navbar-height-mobile: 92px;
