--- a/app/assets/stylesheets/sass_variables.scss
+++ b/app/assets/stylesheets/sass_variables.scss
@@ -10,8 +10,8 @@ $ivory-black: #1d2731;
 $ivory-black-hover: #171f27;
 $green: #02b875;
 $dark-green: #00ab6b;
-$lighter-gray: #f0f0f0;
 $light-gray: rgba(0, 0, 0, 0.20);
+$lighter-gray: rgba(0, 0, 0, 0.40);
 $gray: #c8c8c8;
 $main-background-gray: #FAFAFA;
 $dark-gray: rgba(0,0,0,0.6);
