--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -3,10 +3,10 @@
   border-bottom: 1px solid $light-gray;
   box-shadow: 0 2px 2px -2px rgba(0,0,0,0.15);
   box-sizing: border-box;
+  height: 50px;
   left: 50%;
-  padding-bottom: 5px;
-  padding-top: 5px;
-  position: fixed; // new
+  padding: 10px;
+  position: fixed;
   top: $header-height;
   transform: translate(-50%, 0);
   width: 100%;
@@ -16,15 +16,18 @@
 .nav-bar-inner {
   margin: 0 auto;
   max-width: 1000px !important;
+  position: relative;
   width: 100%;
 }
 
 .nav-bar-hamburger-menu {
+  position: absolute;
   width: 30px;
 }
 
 .nav-bar-hamburger-menu:hover {
   cursor: pointer;
+  padding-top: 2px;
 }
 
 .nav-bar-links-container {
