--- a/app/assets/stylesheets/definitions.scss
+++ b/app/assets/stylesheets/definitions.scss
@@ -6,6 +6,9 @@
   background: #FFFFFF;
   border: 1px solid $light-gray;
   border-radius: 3px;
+  float: left;
+  font-size: 13px;
   height: 22px;
-  padding: 5px 10px 3px 10px;
+  margin: 0px 10px 10px 0px;
+  padding: 5px 10px 0px 10px;
 }
