--- a/app/assets/stylesheets/sass_variables.scss
+++ b/app/assets/stylesheets/sass_variables.scss
@@ -1,11 +1,12 @@
 // colors//
+$lightest-gray: rgba(0,0,0,.05);
 $light-gray: rgba(0, 0, 0, 0.20);
 $lighter-gray: rgba(0, 0, 0, 0.40);
 $gray: #c8c8c8;
 $main-background-gray: #FAFAFA;
 $dark-gray: rgba(0,0,0,0.6);
 $overlay-gray: rgba(51,51,51,0.7);
-
+$darker-white: rgba(255, 255, 255, 0.972549);
 $yellow: #F3D351;
 $dark-yellow: #E8C63B;
 
